# Agents

./: .env.example  .gitignore  README.md  agent.py  langgraph.json  pyproject.toml  requirements.txt  server.py
agents/: __init__.py  config.py  orchestrator.py  permissions.py  permissions.yaml  registry.py  resources.py  router.py
agents/prompts/: __init__.py
config/: agent_rules.yaml  resources.yaml
memory/: AGENTS.md
notebooks/: explore.ipynb
skills/: __init__.py
skills/video-generation/: SKILL.md
skills/video-generation/scripts/: generate_volcengine_image.py  generate_volcengine_video.py
static/: chat.html
subagents/: __init__.py
subagents/coder/: __init__.py  permissions.yaml  prompts.py  tools.py
subagents/general/: __init__.py  permissions.yaml  prompts.py  tools.py
subagents/researcher/: __init__.py  permissions.yaml  prompts.py  tools.py
tests/: test_permissions.py  test_registry.py  test_router.py  test_sandbox.py  test_skill_discovery.py
tools/: README.md  __init__.py  fetch_webpage_content.py  sandbox.py  search.py  thinking.py  utils.py
